--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <!-- Right Content: Profile Picture -->
             <div class="md:w-1/2 float">
-                <img src="saurabh.png" alt="Prashant Mane" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover mx-auto shadow-lg border-4 border-white dark:border-gray-700">
+                <img src="saurabh.PNG" alt="Prashant Mane" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover mx-auto shadow-lg border-4 border-white dark:border-gray-700">
             </div>
         </div>
     </header>
@@ -382,6 +382,9 @@
                     </li>
                     <li>
                         <a href="#contact" class="text-gray-400 hover:text-primary dark:hover:text-secondary transition-colors duration-300">Contact</a>
+                    </li>
+                    <li>
+                        <a href="Data analytics resumen.pdf" class="text-gray-400 hover:text-primary dark:hover:text-secondary transition-colors duration-300">Resume</a>
                     </li>
                 </ul>
             </div>
